--- a/.gitconfig
+++ b/.gitconfig
@@ -12,6 +12,7 @@
 
 [diff]
     noprefix = true
+	external = ~/bin/git-opendiff.sh
 
 [alias]
     lg = "log --pretty=format:'%C(yellow)%h%Creset %s %Cblue%d%Creset' --graph"
