--- a/.gitconfig
+++ b/.gitconfig
@@ -17,7 +17,7 @@
     lg = "log --pretty=format:'%C(yellow)%h%Creset %s %Cblue%d%Creset' --graph"
     plog = !git lg
     dif = "diff -p --stat --no-prefix --patience -M -C -C"
-    sho = "show -p --stat --no-prefix --patience -M -C -C"
+    sho = "show -p --stat --no-prefix --patience -M -C -C --ext-diff"
 
 [color "status"]
     changed = yellow
