--- a/.gitconfig
+++ b/.gitconfig
@@ -28,3 +28,6 @@
 	excludesfile = ~/.global-gitignore
 [push]
 	default = current
+[user]
+	name = Andrew Lorente
+	email = andrew.lorente@gmail.com
