--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".bashrc_sources/externals/vim-fugitive"]
 	path = .bashrc_sources/externals/vim-fugitive
 	url = git://github.com/tpope/vim-fugitive.git
+[submodule ".bashrc_sources/externals/ctrlp"]
+	path = .bashrc_sources/externals/ctrlp
+	url = https://github.com/kien/ctrlp.vim.git
