--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -196,7 +196,7 @@ keyserver hkp://keys.gnupg.net
 # at ftp.gnupg.org/gcrypt/alpha/aegypten/).  To make use of the agent,
 # you have to run an agent as daemon and use the option
 #
-# use-agent
+use-agent
 # 
 # which tries to use the agent but will fallback to the regular mode
 # if there is a problem connecting to the agent.  The normal way to
