--- a/.gitconfig
+++ b/.gitconfig
@@ -17,7 +17,7 @@
     noprefix = true
 
 [alias]
-    lg = "log --pretty=format:'%C(yellow)%h%Creset %s %C(blue)%d%C(reset) %C(green)(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative --graph"
+    lg = "log --graph --format='%C(yellow)%h%C(reset) %C(auto)%d%C(reset) %s %C(green)<%an>%C(reset) %C(bold blue)%cr%C(reset)'"
     plog = !git lg
     dif = "diff -p --stat --no-prefix --patience -M -C -C"
     sho = "show -p --stat --no-prefix --patience -M -C -C --ext-diff"
