Improve the home/work git email handling
The big advantage here is that I can `git config user.email` so that the
author/committer email for that repo defaults to my personal one even
when everything else is defaulting to my work address.

I added a README for the first time because I doubted I'd remember how
to do the .local.gitconfig stuff :)

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,9 @@
+[user]
+    name = Erin Call
+    email = hello@erincall.com
+[include]
+    path = ~/.local.gitconfig
+
 [color]
     ui = auto
 [color "diff-highlight"]
